# misis2024s-21-03-shershnev-a-e

./: .gitignore  CMakeLists.txt  status.md
assets/lab04/: lab04_2.json  lab04_3.json
prj.cw/: CMakeLists.txt  main.cpp
prj.cw/tsne/: CMakeLists.txt  tsne.h
prj.lab/lab01/: lab01.cpp  lab01.md
prj.lab/lab02/: lab02.cpp  lab02.md
prj.lab/lab03/: lab03.cpp  lab03.md
prj.lab/lab04/: lab04.cpp  lab04.md
prj.lab/lab04/test_data/: lab04_1.json  lab04_5.json
prj.lab/lab05/: lab05.cpp  lab05.md
prj.lab/lab06/: lab06.cpp  lab06.md
prj.lab/lab06/test_data/: lab06_4.json
prj.lab/lab07/: lab07.cpp  lab07.md
prj.lab/lab08/: lab08.cpp  lab08.md
prj.lab/lab09/: lab09.cpp  lab09.md
